# ioexplorer

./: .gitignore  Cargo.toml  PKGBUILD  README.md  aur-publish.sh
data/: io.github.ionix.IoExplorer.desktop  io.github.ionix.IoExplorer.metainfo.xml  ioexplorer-portals.conf  ioexplorer.portal  org.freedesktop.FileManager1.service  org.freedesktop.impl.portal.desktop.ioexplorer.service
data/styles/: ioexplorer.css
packaging/arch/: PKGBUILD
packaging/flatpak/: io.github.ionix.IoExplorer.yml
src/: app.rs  bookmarks.rs  config.rs  custom_actions.rs  file_manager.rs  lib.rs  main.rs  portal.rs  selector.rs  start_menu.rs  state.rs  theme.rs
src/providers/: local.rs  mod.rs
src/ui/: computer.rs  context_menu.rs  dnd.rs  mod.rs  settings.rs  sidebar.rs  topbar.rs  window.rs
src/ui/views/: icon.rs  list.rs  mod.rs
